<resources>
    <string name="app_name">Akashi\'s List Database</string>
    <string name="api_website">https://jsonplaceholder.typicode.com/</string>
    <string name="original_website">https://jsonplaceholder.typicode.com/</string>
    <string name="main_database">https://mongodb.com</string>
    <string name="btn_add">Add</string> <!-- Button to add a new item -->
    <string name="btn_delete">Delete</string> <!-- Button to delete an item -->
    <string name="btn_update">Update</string> <!-- Button to update an item -->
    <string name="btn_view">View</string> <!-- Button to view an item -->
    <string name="btn_view_all">View All</string> <!-- Button to view all items -->
    <string name="btn_view_all_users">View All Users</string> <!-- Button to view all users -->
    <string name="login">Login</string> <!-- Button to login -->
    <string name="logout">Logout</string> <!-- Button to logout -->
    <string name="btn_register">Register</string> <!-- Button to register -->
    <string name="btn_search">Search</string>
    <string name="app_background">App background</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_description">App temporal logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="card_image_description">Consulted data image result</string>
    <string name="card_title_description">Result data title</string>
    <string name="back_button">Button to go back</string>
    <string name="search_hint">Search...</string>
    <string name="search">Search</string>
    <string name="anime_image_description">Anime poster image\n</string>
    <string name="title_eng">Title (ENG):</string>
    <string name="title_jp">Title (JP):</string>
    <string name="episodes_data">Episodes:</string>
    <string name="source_data">Source:</string>
    <string name="aired_data">Aired:</string>
    <string name="synopsis_data">Synopsys:</string>
    <string name="default_text">Default data</string>
    <string name="btn_fav">Favorite Button</string>
    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <string name="favorite_anime">Favorite anime</string>
    <string name="favorite_manga">Favorite manga</string>
    <string name="chapters_data">Chapters:</string>
    <string name="volume_data">Volumes:</string>
    <string name="status_data">Status:</string> <!-- Button to search -->

</resources>