<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/login"
        android:textSize="@dimen/medium_text_size"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/primary"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:autofillHints="username"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="8dp"
        android:hint="@string/username"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/password"
        android:autofillHints="password"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/baseline_admin_panel_settings_24"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/btn_custom"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text_size"/>

</FrameLayout>